sample/codepkg/objects/Inventory_Request__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bag of Hope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units_Requested__c</fullName>
        <label>Units_Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory_Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>